Quartz sync: Jun 29, 2025, 5:27 PM